--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
 // bug 123
 
-<h2> hi howare you</h2
-
+<h2> hi howare you</h2>
 
 // bug 121
 <h3> How are you </h3>
@@ -16,6 +15,5 @@
 
 
 
->>>>>>> Stashed changes
 </body>
 </html>
